[gd_scene load_steps=7 format=3 uid="uid://dxjccva3bs88c"]

[ext_resource type="Script" path="res://Main.gd" id="1_7crvw"]
[ext_resource type="PackedScene" uid="uid://qqqttsrd8v13" path="res://Customer.tscn" id="10_8h2at"]
[ext_resource type="Texture2D" uid="uid://cjeebvkomlqdq" path="res://assets/level_pics/Level_1_720x720.jpeg" id="13_gyibr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0h2b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_unfyw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g1wml"]

[node name="Main" type="Node2D"]
script = ExtResource("1_7crvw")
customer_scene = ExtResource("10_8h2at")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScoreContainer"]
layout_mode = 2

[node name="HappyLabel" type="Label" parent="CanvasLayer/ScoreContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "üòä  0"

[node name="UnhappyLabel" type="Label" parent="CanvasLayer/ScoreContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "üò°  0"

[node name="TimerContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30

[node name="TimerLabel" type="Label" parent="CanvasLayer/TimerContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "‚è±Ô∏è 0"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.219
anchor_top = 0.23
anchor_right = 0.691
anchor_bottom = 0.57
offset_left = -41.288
offset_top = -188.04
offset_right = 134.968
offset_bottom = 311.64

[node name="StartPicture" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("13_gyibr")

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer/StartPicture"]
custom_minimum_size = Vector2(400, 130)
layout_mode = 0
offset_left = 173.0
offset_top = 490.0
offset_right = 573.0
offset_bottom = 620.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_o0h2b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_unfyw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_g1wml")

[node name="FinishBanner" type="Panel" parent="CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/CenterContainer/FinishBanner"]
layout_mode = 0
offset_left = -515.0
offset_top = -112.0
offset_right = 559.0
offset_bottom = 150.0
color = Color(0.0666667, 0.317647, 0.415686, 1)

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/FinishBanner"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.456
anchor_top = 0.346
anchor_right = 0.456
anchor_bottom = 0.346
offset_left = -433.0
offset_top = -97.0
offset_right = 502.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 90
text = "üéâ Level Complete! üéâ"

[node name="RestartButton" type="Button" parent="CanvasLayer/CenterContainer/FinishBanner"]
layout_mode = 0
offset_left = -230.0
offset_top = 158.0
offset_right = -85.0
offset_bottom = 227.0
text = "Restart"

[node name="NextLevelButton" type="Button" parent="CanvasLayer/CenterContainer/FinishBanner"]
layout_mode = 0
offset_left = 149.0
offset_top = 159.0
offset_right = 318.0
offset_bottom = 229.0
text = "Next Level"

[node name="CustomerSpawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true
